--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.3",
+    "react-router-hash-link": "^2.4.3",
     "react-slick": "^0.31.0",
     "shadcn-ui": "^0.9.5",
     "slick-carousel": "^1.8.1",
