--- a/package.json
+++ b/package.json
@@ -15,20 +15,24 @@
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-toast": "^1.2.15",
     "@tailwindcss/vite": "^4.1.13",
     "axios": "^1.13.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.22",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-day-picker": "^9.11.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.9.3",
     "react-router-hash-link": "^2.4.3",
     "react-slick": "^0.31.0",
+    "recharts": "^3.7.0",
     "shadcn-ui": "^0.9.5",
     "slick-carousel": "^1.8.1",
     "sonner": "^2.0.7",
